# sdk-sidewalk

./: .checkpatch.conf  .gitattributes  .gitignore  .gitmodules  .uncrustify.cfg  2025-01-praca.diff  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.rst  Kconfig  Kconfig.dependecies  Kconfig.dependencies  LICENSE  LICENSE.txt  LICENSE_AMAZON.txt  README.rst  VERSION  internal_west.yml  requirements.txt  test_config.yaml  test_file_do_not_merge  version.cmake  west.yml
lib/: CMakeLists.txt
lib/ble_only/: CMakeLists.txt
lib/cortex-m33/ble_only/: CMakeLists.txt
lib/cortex-m33/lora_fsk/: CMakeLists.txt
lib/cortex-m4/: CMakeLists.txt
lib/cortex-m4/ble_only/: CMakeLists.txt
lib/cortex-m4/lora_fsk/: CMakeLists.txt
lib/include/: sid_900_cfg.h  sid_api.h  sid_pal_timer_types.h  sx126x_config.h
lib/include/test/: sid_tests_runner.h
lib/lora_fsk/: CMakeLists.txt
lib/validation/: CMakeLists.txt
samples/app/: CMakeLists.txt  Kconfig  README.rst  prj.conf  prj_no_dfu.conf  prj_release.conf  sample.yaml
samples/app/boards/: nrf52840dk_nrf52840.overlay
samples/app/configuration/: pm_static_no_dfu.yml
samples/app/doc/: smf_graph.puml
samples/app/src/: main.c
samples/lr11xx_firmware_update/: CMakeLists.txt  Kconfig.sysbuild  prj.conf  sample.yaml
samples/lr11xx_firmware_update/boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
samples/lr11xx_firmware_update/include/: app.h  lr1110_transceiver_0401.h  lr11xx_firmware_update.h
samples/lr11xx_firmware_update/src/: app.c  lr11xx_firmware_update.c  main.c
samples/sensor_monitoring/: CMakeLists.txt  Kconfig  fsk.conf  lora.conf  prj.conf  sample.yaml
samples/sensor_monitoring/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
samples/sensor_monitoring/config/: app_900_config.c  app_900_config.h  app_ble_config.c  board_config.c  board_config.h
samples/sensor_monitoring/ext/: sid_parser_utils.h
samples/sensor_monitoring/include/: sm_buttons.h  sm_callbacks.h  sm_events.h  sm_leds.h  sm_notifications.h  sm_states.h  sm_task.h  sm_timers.h  sm_utils.h
samples/sensor_monitoring/src/: main.c  sm_buttons.c  sm_callbacks.c  sm_leds.c  sm_notifications.c  sm_states.c  sm_task.c  sm_timers.c
samples/sid_ble/: CMakeLists.txt  prj.conf  sample.yaml
samples/sid_ble/boards/: nrf52840dk_nrf52840.overlay
samples/sid_ble/src/: ace_utils.c  assert_action.c  main.c  sid_ble_network_ifc.c
samples/sid_dut/: CMakeLists.txt  Kconfig  pm_static_nrf5340dk_nrf5340_cpuapp_ns.yml  prj.conf  sample.yaml
samples/sid_dut/boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_ns.overlay
samples/sid_dut/include/: sid_thread.h
samples/sid_dut/pytest/: .env.constants  .gitignore  example.env.secrets  test_functional.py
samples/sid_end_device/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.sensor_monitoring  Kconfig.sysbuild  VERSION  overlay-demo.conf  overlay-dut.conf  overlay-hello.conf  pm_static.yml  pm_static_nrf52840dk_nrf52840.yml  pm_static_nrf5340dk_nrf5340_cpuapp_release.yml  pm_static_nrf54l15dk_nrf54l10_cpuapp.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp_ns.yml  pm_static_nrf54l15dk_nrf54l15_cpuapp_release.yml  pm_static_nrf54l15pdk_nrf54l15_cpuapp_ns.yml  pm_static_thingy53_nrf5340_cpuapp.yml  prj.conf  prj_no_dfu.conf  prj_release.conf  sample.yaml
samples/template/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.sensor_monitoring  README.rst  ble.conf  bootloader_version.cmake  cli.conf  fsk.conf  lora.conf  overlay-dut.conf  pm_static.yml  prj.conf  prj_no_dfu.conf  prj_release.conf  sample.yaml  test.conf  usb_dfu.conf  version.conf
samples/template_ble/: CMakeLists.txt  Kconfig  cli.conf  pm_static.yml  pm_static_nrf52840dk_nrf52840.yml  pm_static_nrf52840dk_nrf52840_release.yml  prj.conf  prj_release.conf  sample.yaml  usb_dfu.conf
subsys/: CMakeLists.txt
subsys/ace/: CMakeLists.txt
subsys/app_utils/: CMakeLists.txt
subsys/config/: CMakeLists.txt  app_ble_config.c  app_subGHz_config.c  board_init.c  board_init.h
subsys/demo/: CMakeLists.txt  sid_demo_parser.c
subsys/hal/: CMakeLists.txt  Kconfig
subsys/include/: sid_pal_assert_ifc.h  sid_pal_delay_ifc.h  sid_pal_gpio_ifc.h  sid_pal_uptime_ifc.h
subsys/nrf70_location/: CMakeLists.txt  Kconfig  nrf70_wifi_scan.c  nrf70_wifi_scan.h  sid_pal_gnss_stub.c  sid_pal_wifi_nrf70_impl.c
subsys/pal/: CMakeLists.txt
subsys/sal/: CMakeLists.txt
subsys/semtech/: CMakeLists.txt
tests/example_test/: CMakeLists.txt  Kconfig  prj.conf
tests/sidewalk_tests/: CMakeLists.txt  prj.conf  testcase.yaml
utils/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.mcuboot.defaults  sid_api_delegated.c  sid_api_delegated.h  version.cmake  window_iterator_macro.h
utils/buttons_utils/: CMakeLists.txt  Kconfig  buttons.c  buttons_internal.h
utils/dfu_multi_image_utils/: CMakeLists.txt  dfu_multi_image_utils.c  dfu_multi_image_utils.h
utils/include/: application_states.h  buttons.h  flashing_led.h  json_printer.h  nordic_dfu.h  result.h  settings_utils.h  sidTypes2Json.h  sidTypes2str.h  sid_api_delegated.h  sid_on_dev_cert.h  sid_shell.h  sidewalk_version.h  state_notifier.h  state_notifier_gpio_backend.h  state_notifier_log_backend.h  window_iterator_macro.h
utils/nanopb/: Kconfig
utils/scratch_buffer/: CMakeLists.txt  scratch_buffer.h
utils/settings_utils/: CMakeLists.txt  Kconfig  settings_utils.c
utils/sidewalk_dfu/: CMakeLists.txt  Kconfig  nordic_dfu.c  nordic_dfu_img.c
utils/src/: CMakeLists.txt  board_config.c  buttons.c  flashing_led.c  main.c  nordic_dfu.c  settings_utils.c  shell.c  sid_api_delegated.c  sid_on_dev_cert.c  sid_on_dev_cert_cli.c  state_notifier.c  state_notifier_gpio_backend.c  state_notifier_log_backend.c
utils/state_notifier/: CMakeLists.txt  Kconfig  state_notifier.c  state_notifier_gpio_backend.c  state_notifier_log_backend.c
utils/tlv/: CMakeLists.txt  Kconfig  tlv.c  tlv_flash_storage_impl.c  tlv_ram_storage_impl.c
(+1468 files in other folders)
