#
# Copyright (c) 2022 Nordic Semiconductor
#
# SPDX-License-Identifier: LicenseRef-Nordic-4-Clause
#

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(sidewalk)

target_sources(app PRIVATE src/main.c)

target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libace_ama.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_network_address.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libext_nanopb.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_assert_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libiot_ble.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_critical_region_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsall.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_crypto_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsall_mgm_core.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_delay_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsall_security.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_gpio_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsdb_app_parser.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_log_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_ama_adapter_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_mfg_store_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_api.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_storage_kv_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_asl_parser.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_swi_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_ble_adapter_nordic.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_temperature_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_ble_network_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_timer_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_clock.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_pal_uptime_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_event_log.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_parser_utils.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_event_queue.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_rcp.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsidewalk_legacy.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_remote_logging.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_flex_parser.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_rng.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_hal_nordic_impl.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_security.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_mac_link_layer_parser.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_time_ops.a)
target_link_libraries(app PRIVATE ${ZEPHYR_BASE}/../sidewalk/lib/libsid_memory_pool.a)